ajout logo github et rework sommaire

--- a/Martin_Bouchard.tex
+++ b/Martin_Bouchard.tex
@@ -38,7 +38,7 @@
 %\usepackage{lmodern}
 \usepackage[T1]{fontenc}
 
-
+\usepackage{fontawesome}
 %-----------Font
 
 
@@ -196,7 +196,6 @@
 
 
 
-
 %SUBSECTION----------------------------------
 \def\middleline{
 \raisebox{0.35em}{\line(1,0){50}}
@@ -246,14 +245,16 @@
   \textit{4449 rue Adam}  \\
    \textit{Montréal H1V 1T7}\\ 
   \textit{marbouchl@gmail.com} \\
-   \textit{438 888 9741}  
+   \textit{438 888 9741}  \\
+    \faGithub\hspace{0.2em}\textit github: GitMyCode 
+    
 \end{tabular}
 \end{minipage}
 \end{table}
 
 
 \section{Sommaire}
-{Informaticien en génie logiciel de formation, j'ai aussi des connaissances dans  le domaine des arts visuels et de la criminologie. En dehors de mes cours, j'ai développé des compétences pour le python, le developpement android et la programmation web (front-end/back-end).}
+{Diplômé d'un baccalauréat en programmation et génie logiciel, je perfectionne et étends mes connaissances de manière autodidacte dans mes temps libres. J'ai un intérêt pour les problèmes algorithmiques ( particulierement ceux sur \\\href{https://code.google.com/codejam}{code.google.com/codejam}) et les applications web. J'ai de l'expérience dans l'ensemble du processus de developpement logiciel, de la conception jusqu'à la mise en production et maintenance.}
 \vspace{-1em}
 \section{Formation}
 
@@ -286,7 +287,7 @@
 \cventre[0.5em]{2011}{Commis-Archive}{Agence des Services Frontaliers du Canada.}{Gestion des dossiers dans les archives des services frontalier}
 
 \section{Compétence Informatique}
-
+\vspace{1em}
 %\begin{comment}
 \cvdoubleitem{Programmation}{Java, Python, C/C++, Assembleur, BASH, Ruby}
 			 {System}{Windows, Linux}\vspace{1em}
@@ -347,8 +348,12 @@ Mon best         & Java \newline C\#  & & \tabularnewline[10ex]
 
 \cvdetaillist{Java}{
 \begin{itemize}
-\item Jeu de Connect4 avec un AI minmax et interface. Le jeu a été conçu dans le cadre d'un cours sur les designs pattern. Il y a notamment: Strategy, Command, Memento, Factory, Facade \small \href{https://github.com/GitMyCode/puissance4}{https://github.com/GitMyCode/puissance4}
-\item Intelligence artificielle du jeu Connect5(\textit{Go-Moku}) \small \href{https://github.com/GitMyCode/INF4230}{https://github.com/GitMyCode/INF4230}
+\item Jeu de Connect4 avec un AI minmax et interface. Le jeu a été conçu dans le cadre d'un cours sur les designs pattern. Il y a notamment: Strategy, Command, Memento, Factory, Facade \small \href{https://github.com/GitMyCode/puissance4}{github.com/GitMyCode/puissance4}
+\item Intelligence artificielle du jeu Connect5(\textit{Go-Moku}) \small \href{http://gitmycode.github.io/Connect5-Ai/}{gitmycode.github.io/Connect5-Ai}
+
+\item Solver du jeu \emph{Sokoban} avec l'algorithme A*  \small \href{https://github.com/GitMyCode/Sokoban-solver}{github.com/GitMyCode/Sokoban-solver}
+
+
 \end{itemize}
 }
 
@@ -420,11 +425,9 @@ Mon best         & Java \newline C\#  & & \tabularnewline[10ex]
 \item Guitare
 \end{itemize}
 }
-{\subsection{}
-\begin{itemize}
-\item Video games
-\item Board games
-\end{itemize}
+{
+
+
 }
 
 %\includepdfmerge{ReleverNotesNonOfficiel.pdf,-}
