ajustement pour la section Autre (2 colonne)

--- a/Martin_Bouchard.tex
+++ b/Martin_Bouchard.tex
@@ -411,7 +411,34 @@ Mon best         & Java \newline C\#  & & \tabularnewline[10ex]
 
 
 \vspace{-2em}
-\section{Autre}\vspace{-1em}
+\section{Autre}\vspace{0em}
+
+\begin{tabular*}{\linewidth}{  
+                   p{\dimexpr 0.33\linewidth-1\tabcolsep } 
+                   p{\dimexpr 0.66\linewidth-1\tabcolsep }  
+                   }
+\begin{minipage}[t]{\linewidth}                   
+\subsection{Langue}
+\begin{itemize}
+\item[$\bullet$] Français langue maternelle 
+\item Anglais fonctionnel
+\end{itemize}
+\end{minipage}
+&
+\begin{minipage}[t]{\linewidth}
+\subsection{Intérêt}
+\begin{itemize}
+\item[$\bullet$] Programmation : Toujours à la recherche de projets intéressants !
+\item Guitare
+\end{itemize}
+\end{minipage}
+\tabularnewline
+
+\end{tabular*}
+
+
+
+\begin{comment}
 \cvtriplebox{
 \subsection{Langue}
 \begin{itemize}
@@ -419,16 +446,15 @@ Mon best         & Java \newline C\#  & & \tabularnewline[10ex]
 \item Anglais fonctionnel
 \end{itemize}
 }
-{\subsection{Intérêt}
+{
+\subsection{Intérêt}
 \begin{itemize}
 \item[$\bullet$] Programmation : Toujours à la recherche de projets intéressants !
 \item Guitare
 \end{itemize}
 }
 {
-
-
 }
-
+\end{comment}
 %\includepdfmerge{ReleverNotesNonOfficiel.pdf,-}
 \end{document}
