--- a/Martin_Bouchard.tex
+++ b/Martin_Bouchard.tex
@@ -254,7 +254,7 @@
 
 
 \section{Sommaire}
-{Diplômé d'un baccalauréat en programmation et génie logiciel, je perfectionne et étends mes connaissances de manière autodidacte dans mes temps libres. J'ai un intérêt pour les problèmes algorithmiques ( particulierement ceux sur \\\href{https://code.google.com/codejam}{code.google.com/codejam}) et les applications web. J'ai de l'expérience dans l'ensemble du processus de developpement logiciel, de la conception jusqu'à la mise en production et maintenance.}
+{Diplômé d'un baccalauréat en programmation et génie logiciel, je perfectionne et étends mes connaissances de manière autodidacte dans mes temps libres. J'ai un intérêt pour les problèmes algorithmiques ( particulierement ceux sur \\\href{https://code.google.com/codejam}{code.google.com/codejam}) et les applications web. J'ai de l'expérience dans l'ensemble du processus de développement logiciel, de la conception jusqu'à la mise en production et maintenance.}
 \vspace{-1em}
 \section{Formation}
 
@@ -274,7 +274,7 @@
 
 \cventre[2em]{2013}{Stagiaire}
 {Ville de Montréal}
-{Conception d'applications d'affaires sur la plateforme de developpement web Apex de Oracle.}
+{Conception d'applications d'affaires sur la plateforme de développement web Apex de Oracle.}
 {$\bullet$ Design d'interface utilisateur  $\bullet$ Programmation front-end et back-end(Apex) de page web \\$\bullet$ Conception de schema bd  $\bullet$ Intégration avec LDAP $\bullet$ Architecture d'application sous forme de service}
 
 
@@ -289,7 +289,7 @@
 \section{Compétence Informatique}
 \vspace{1em}
 %\begin{comment}
-\cvdoubleitem{Programmation}{Java, Python, C/C++, Assembleur, BASH, Ruby}
+\cvdoubleitem{Programmation}{Java, Scala, Python, C/C++, Assembleur, BASH, Ruby}
 			 {System}{Windows, Linux}\vspace{1em}
 \cvdoubleitem{Web framework}{Apex, Django, Wordpress, Ruby on Rails, Play}
 			 {Web}{HTML/CSS , PHP, javascript, jQuery Mobile, AngularJS, Bootstrap  }\vspace{1em}
@@ -342,28 +342,32 @@ Mon best         & Java \newline C\#  & & \tabularnewline[10ex]
 \section{Travail Pratique \small (École)}
 \begin{tabular*}{\textwidth}{p{\dimexpr 0.15\linewidth-1\tabcolsep }
 						 	 p{\dimexpr 0.65\linewidth-1\tabcolsep }} 
-\centering\textbf{\underline{Langage}} &\centering\textbf{\underline{Description}}
+\centering\underline{Langage} &\centering\underline{Description}
 \end{tabular*}
 \\\\
 
 \cvdetaillist{Java}{
-\begin{itemize}
-\item Jeu de Connect4 avec un AI minmax et interface. Le jeu a été conçu dans le cadre d'un cours sur les designs pattern. Il y a notamment: Strategy, Command, Memento, Factory, Facade \small \href{https://github.com/GitMyCode/puissance4}{github.com/GitMyCode/puissance4}
-\item Intelligence artificielle du jeu Connect5(\textit{Go-Moku}) \small \href{http://gitmycode.github.io/Connect5-Ai/}{gitmycode.github.io/Connect5-Ai}
+\begin{itemize}\setlength{\itemsep}{1pt}
+  \setlength{\parskip}{5pt}
+  \setlength{\parsep}{0pt}
+\item Jeu de Puissance4 avec un A.I. minmax et une interface. Le jeu a été conçu dans le cadre d'un cours sur les designs pattern. Il y a notamment: Strategy, Command, Memento, Factory, Facade \small \href{https://github.com/GitMyCode/puissance4}{github.com/GitMyCode/puissance4}
+\item Intelligence artificielle du jeu Connect5(\textit{Go-Moku}). Tous les A.I. de la classe devaient participer à un tournois entre eux. La note était attribuée en fonction du placement après la compétition. Mon A.I. s'est distingué des autres et a obtenu la première place   \small \href{http://gitmycode.github.io/Connect5-Ai/}{gitmycode.github.io/Connect5-Ai} 
 
-\item Solver du jeu \emph{Sokoban} avec l'algorithme A*  \small \href{https://github.com/GitMyCode/Sokoban-solver}{github.com/GitMyCode/Sokoban-solver}
+\item Solveur du jeu \emph{Sokoban} avec l'algorithme A*  \small \href{https://github.com/GitMyCode/Sokoban-solver}{github.com/GitMyCode/Sokoban-solver}
 
 
 \end{itemize}
 }
 
 \cvdetaillist{C/C++}{
-\begin{itemize}
-\item Implémentation des fonctionnalités de la commande \emph{find} d'Unix
+\begin{itemize}\setlength{\itemsep}{1pt}
+  \setlength{\parskip}{5pt}
+  \setlength{\parsep}{0pt}
+\item Implémentation des fonctionnalitées de la commande \emph{find} d'Unix
 \item Simulation de l'algorithme de remplacement des pages (Optimial, Horloge, LRU). Conception d'un tableau dynamique 2 dimmensions.
 
 \item Jeu de \emph{snake} avec une implémentation d'un tableau dynamique
-\item Système interrogable prenant en input des données de location de personnes. Le temps d'éxécution du programme devait être optimisé. Implentation d'un Arbre-map
+\item Système interrogeable prenant en entré des données de location de personnes. Le temps d'éxécution du programme devait être optimisé \emph{(meilleur temps de la classe)}. Implentation d'un Arbre-map
 \item Système de recherche dans un Graph. Implentation de l'algorythme de Tarjan et Dijkstra
 \end{itemize}
 }
@@ -395,7 +399,7 @@ Mon best         & Java \newline C\#  & & \tabularnewline[10ex]
 {J'ai suivie un cours de développement sur la plateforme Android. C'est un cours en ligne donné par l'Université du Maryland via le site coursera.org}
 }
 {\cvboxitem{MineSweeper AI}{}{https://github.com/GitMyCode/Minesweeper-AI}{Java}
-{Un projet initialement personnel qui a été repris pour un projet de fin de session d'un cours d'Intelligence Artificiel}
+{Un projet initialement personnel qui a été repris pour un projet de fin de session d'un cours d'Intelligence Artificielle}
 }
 {
 \cvboxitem{Site Web}{contrat}{http://gitmycode.github.io/avocatmontreal/}{ HTML/CSS/Javascript}
