correction de marie

--- a/Martin_Bouchard.tex
+++ b/Martin_Bouchard.tex
@@ -254,7 +254,7 @@
 
 
 \section{Sommaire}
-{Diplômé d'un baccalauréat en programmation et génie logiciel, je perfectionne et étends mes connaissances de manière autodidacte dans mes temps libres. J'ai un intérêt pour les problèmes algorithmiques ( particulierement ceux sur \\\href{https://code.google.com/codejam}{code.google.com/codejam}) et les applications web. J'ai de l'expérience dans l'ensemble du processus de développement logiciel, de la conception jusqu'à la mise en production et maintenance.}
+{Diplômé d'un baccalauréat en programmation et génie logiciel. Je perfectionne et étends également mes connaissances de manière autodidacte dans mes temps libres. J'ai un intérêt pour les problèmes algorithmiques ( particulierement ceux sur \\\href{https://code.google.com/codejam}{code.google.com/codejam}) et les applications web. J'ai de l'expérience dans l'ensemble du processus de développement logiciel, de la conception jusqu'à la mise en production et la maintenance.}
 \vspace{-1em}
 \section{Formation}
 
@@ -364,11 +364,11 @@ Mon best         & Java \newline C\#  & & \tabularnewline[10ex]
   \setlength{\parskip}{5pt}
   \setlength{\parsep}{0pt}
 \item Implémentation des fonctionnalitées de la commande \emph{find} d'Unix
-\item Simulation de l'algorithme de remplacement des pages (Optimial, Horloge, LRU). Conception d'un tableau dynamique 2 dimmensions.
+\item Simulation de l'algorithme de remplacement des pages (Optimial, Horloge, LRU). Conception d'un tableau dynamique 2 dimensions.
 
 \item Jeu de \emph{snake} avec une implémentation d'un tableau dynamique
-\item Système interrogeable prenant en entré des données de location de personnes. Le temps d'éxécution du programme devait être optimisé \emph{(meilleur temps de la classe)}. Implentation d'un Arbre-map
-\item Système de recherche dans un Graph. Implentation de l'algorythme de Tarjan et Dijkstra
+\item Système interrogeable prenant en entrée des données de location de personnes. Le temps d'éxécution du programme devait être optimisé \emph{(meilleur temps de la classe)}. Implémentation d'un Arbre-map
+\item Système de recherche dans un Graph. Implémentation de l'algorythme de Tarjan et Dijkstra
 \end{itemize}
 }
 \cvdetaillist{\small Nodejs/Mongodb HTML/CSS}{$\bullet$ Application web couvrant la plupart des verbes http sur une base de données mongodb   \newline\small{\href{http://gitmycode.github.io/inf4375-tp3/}{http://gitmycode.github.io/inf4375-tp3/}}}
@@ -387,8 +387,8 @@ Mon best         & Java \newline C\#  & & \tabularnewline[10ex]
 \section{Réalisation Technique \small(projets personnels)}
 
 \cvtriplebox
-{\cvboxitem{Site web}{abandonné}{www.courspiano.ca}{Wordpress,PHP}
-{Un site construit sur la plateforme Wordpress. Design fait sur photoshop puis realisé en theme-wordpress}}
+{\cvboxitem{MineSweeper AI}{}{https://github.com/GitMyCode/Minesweeper-AI}{Java}
+{Un projet initialement personnel qui a été repris pour un projet de fin de session d'un cours d'Intelligence Artificielle}}
 {\cvboxitem{Site web}{abandonné}{http://coursmusique.codefaction.webfactional.com}{Django}
 {Un site designé sur photoshop et transposé en html/css.}}
 {\cvboxitem{Encefal}{projet en collaboration}{http://foireauxlivres.uqam.ca/}{Django}
@@ -396,19 +396,20 @@ Mon best         & Java \newline C\#  & & \tabularnewline[10ex]
 
 \cvtriplebox
 {\cvboxitem{Programming Mobile Applications for Android Handheld Systems}{}{https://class.coursera.org/android-001}{Android, Java}
-{J'ai suivie un cours de développement sur la plateforme Android. C'est un cours en ligne donné par l'Université du Maryland via le site coursera.org}
+{J'ai suivi un cours de développement sur la plateforme Android. C'est un cours en ligne donné par l'Université du Maryland via le site coursera.org}
 }
-{\cvboxitem{MineSweeper AI}{}{https://github.com/GitMyCode/Minesweeper-AI}{Java}
-{Un projet initialement personnel qui a été repris pour un projet de fin de session d'un cours d'Intelligence Artificielle}
+{
+\cvboxitem{Site web}{abandonné}{www.courspiano.ca}{Wordpress,PHP}
+{Un site construit sur la plateforme Wordpress. Design fait sur photoshop puis realisé en theme-wordpress}
 }
 {
 \cvboxitem{Site Web}{contrat}{http://gitmycode.github.io/avocatmontreal/}{ HTML/CSS/Javascript}
 {Un contrat de mise à jours d'un siteweb vers un design plus moderne et mobile friendly }
 }
 \cvtriplebox
-{\cvboxitem{Android Game}{en cours}{https://github.com/GitMyCode/laser-game}{Unity,C\#}{Une petite idée de jeu android que j'ai eu. C'est principalement pour le plaisir de le faire plus que pour le jeu. C'est un jeu en 2d real-time multiplayer}}
+{\cvboxitem{Android Game}{en cours}{https://github.com/GitMyCode/laser-game}{Unity,C\#}{Une petite idée de jeu android que j'ai eue. C'est principalement pour le plaisir de le faire plus que pour le jeu. C'est un jeu en 2d real-time multiplayer}}
 {\cvboxitem{Google Codejam}{}{https://github.com/GitMyCode/code-jam}{Java, Scala, Dynamic programming}
-{\href{https://code.google.com/codejam}{Google codejam} est un site de compétition de programmation. Ce repo contient mes solutions. Le code n'est malheureusement pas très entretenu }}
+{\href{https://code.google.com/codejam}{Google codejam} est un site de compétition de programmation. Ce \emph{repo} contient mes solutions. Le code n'est malheureusement pas très entretenu }}
 
 {}
 
